Make handwriting pad a little smaller to avoid overflowing.

--- a/apps/keyboard/style/keyboard.css
+++ b/apps/keyboard/style/keyboard.css
@@ -714,4 +714,5 @@ bubble above the key when you tap and hold. */
 /* Handwriting */
 #handwriting {
   background-color: #ebeced;
+  margin: -1px;
 }
